; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/clueboard/66/keymaps/magicmonty/extr_keymap.c_clueboard_set_led.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/clueboard/66/keymaps/magicmonty/extr_keymap.c_clueboard_set_led.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clueboard_set_led(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %21 [
    i32 133, label %6
    i32 131, label %9
    i32 130, label %12
    i32 132, label %15
    i32 128, label %18
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @rgblight_sethsv_noeeprom(i32 190, i32 255, i32 %7)
  br label %21

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @rgblight_sethsv_noeeprom(i32 46, i32 255, i32 %10)
  br label %21

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @rgblight_sethsv_noeeprom(i32 86, i32 255, i32 %13)
  br label %21

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @rgblight_sethsv_noeeprom(i32 346, i32 255, i32 %16)
  br label %21

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @rgblight_sethsv_noeeprom(i32 206, i32 255, i32 %19)
  br label %21

21:                                               ; preds = %2, %18, %15, %12, %9, %6
  ret void
}

declare dso_local i32 @rgblight_sethsv_noeeprom(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
